Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1986

Fix for MacOSUnicodeConverter::CopyCStringToPascal

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.0.0, 3.0.1, 3.1.0, 3.1.1, 3.1.2, 3.1.3, 3.1.4
    • 3.2.0
    • Utilities
    • Mac OS X 10.6 and 10.7

    Description

      sizeof(pas) must be replace by sizeof(Str255), because sizeof(pas) returns sizeof(unsigned char *) and not sizeof(unsigned char[256]) as desired.

      Attachments

        Activity

          People

            scantor Scott Cantor
            benoit.blaquiere@ign.fr benoit.blaquiere
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: