XERCESC-1986 - Fix for MacOSUnicodeConverter::CopyCStringToPascal

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@1801642 13f79535-47bb-0310-9956-ffa450edef68